--- a/static/style/home.css
+++ b/static/style/home.css
@@ -90,3 +90,33 @@ p  {
 .hideme {
   opacity: 0;
 }
+
+.content-pad {
+  padding: 3rem;
+}
+
+.g-grad {
+  background: linear-gradient(45deg, rgb(248,248,255), rgb(193, 193, 228), rgb(205, 205, 212), rgb(163, 165, 190));
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  box-shadow: 0 0 5px rgb(200, 200, 200);
+  margin: 1rem;
+  width: 98vw;
+  border-radius: 3px;
+}
+
+@keyframes gradient {
+0% {
+  background-position: 0% 50%;
+}
+50% {
+  background-position: 100% 50%;
+}
+100% {
+  background-position: 0% 50%;
+}
+}
+
+.h-title {
+  font-weight: 400;
+}
