--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,7 @@
               <p class="card-text text-center">
                 Safely Stat is an open source platform that provides differentially private
                 statistics on datasets in both the local and global model. To learn more about
-                differential privacy and how to use the power of Safely Stat. Visit the Resources.
+                differential privacy and how to use the power of Safely Stat visit the Resources page.
               </p>
               <div class="text-center">
                 <a class="btn btn-outline-secondary upload-btn" href="{{ url_for('page.resources') }}"
@@ -138,7 +138,7 @@
               <h5 class="card-title text-center">Learn</h5>
               <p class="card-text">
                 If you're interested in learning about Safely Stat and the tools 
-                that make it possible, visit the Resources page.
+                that make it possible, visit Resources.
               </p>
               <div class="text-center">
                 <a class="btn btn-outline-secondary upload-btn" href="{{ url_for('page.resources') }}"
