--- a/templates/resources.html
+++ b/templates/resources.html
@@ -157,8 +157,7 @@
             <div class="card-body">
               <h5 class="card-title text-center">Proper Formatting</h5>
               <p class="card-text p-1">
-                Ensure your CSV is formatted properly. The below example contains 
-                fields (columns): age; height; weight.
+                Ensure your CSV is formatted properly. The below exemplifies proper formatting.
                 <code style="display: block; white-space: pre-wrap">
                   age,height,weight
                   30,70,200
