--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -51,7 +51,7 @@
                     {{s['description']}}
                   </p>
                   <p class="card-text g-text">
-                    Created by {{s['author']}}
+                    Created by <b>{{s['author']}}</b> 
                   </p>
                 </div>
               </div>
