--- a/templates/mydata.html
+++ b/templates/mydata.html
@@ -108,7 +108,7 @@
                   {{s['description']}}
                 </p>
                 <p class="card-text g-text">
-                  Created by {{s['author']}}
+                  Created by <b>{{s['author']}}</b>
                 </p>
               </div>
             </div>
