update to gallery page

--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -48,7 +48,7 @@
                 <div class="card-body">
                   <h5 class="card-title g-text">{{s['title']}}</h5>
                   <p class="card-text g-desc">
-                    {{s['description']}}
+                    {{s['description'][0:150]}}...
                   </p>
                   <p class="card-text g-text">
                     Created by <b>{{s['author']}}</b> 
