--- a/static/style/gallery.css
+++ b/static/style/gallery.css
@@ -11,6 +11,7 @@
     height: 0;
     color: black;
     text-decoration: none;
+    text-overflow:ellipsis;
     /* background-color: rgb(185, 191, 224) !important; */
 }
 
