--- a/templates/mydata.html
+++ b/templates/mydata.html
@@ -75,9 +75,9 @@
               </div>
             </div>
 
-          <div class="card mt-2">
+          <div class="card mt-4">
             <div class="card-body">
-              <h5 class="mt-3">Local Model</h5>
+              <h5>Local Model</h5>
               <p>Noise will be injected when you upload your data, ensuring we cannot see your sensitive data. 
                 However, statistics accuracy is generally decreased in this model.</p>
                 <p>Supported statistics: Count</p>
@@ -104,9 +104,6 @@
             <div class="card gallery-card">
               <div class="card-body">
                 <h5 class="card-title g-text">{{s['title']}}</h5>
-                <p class="card-text g-desc">
-                  {{s['description']}}
-                </p>
                 <p class="card-text g-text">
                   Created by <b>{{s['author']}}</b>
                 </p>
