--- a/templates/resources.html
+++ b/templates/resources.html
@@ -55,8 +55,8 @@
             <div class="card-body">
               <h5 class="card-title text-center">What is DP?</h5>
               <p class="card-text">
-                Differential Privacy allows for datasets containing sensitive data to be shared
-                without exposing individual data points. This done by injecting noise (randomness) into the 
+                DP allows for datasets containing sensitive data to be shared
+                without exposing individual data points. This is done by injecting noise (randomness) into the 
                 dataset. This <a href="https://www.youtube.com/watch?v=-JRURYTfBXQ">video</a> from NIST explains DP.
               </p>
             </div>
@@ -109,7 +109,7 @@
               <p class="card-text">
                 In DP, epsilon is the privacy parameter. The closer to zero that epsilon is, the more 
                 randomness will be injected into the dataset.
-                Checkout datasets titled "Test" in The Gallery to see the effect of epsilon.
+                Checkout datasets by Safely Stat in The Gallery to see the effect of epsilon.
               </p>
             </div>
           </div>
