user auth complete

--- a/templates/mydata.html
+++ b/templates/mydata.html
@@ -34,9 +34,9 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Name</h5>
-              <p class="card-text" id="username">John Doe</p>
+              <p class="card-text" id="username">{{name}}</p>
               <h5 class="card-title">Email</h5>
-              <p class="card-text" id="email">email@email.com</p>
+              <p class="card-text" id="email">{{email}}</p>
             </div>
           </div>
 
