--- a/templates/signin.html
+++ b/templates/signin.html
@@ -117,35 +117,34 @@
                       </svg>
                     </div>
 
-                    <form>
-                      <h3 class="mt-4">Sign in</h3>
+                    <div>
+                      {% with messages = get_flashed_messages() %}
+                      {% if messages %}
+                          <div style="color: rgb(163, 165, 190);;">
+                              {{ messages[0] }}
+                          </div>
+                      {% endif %}
+                      {% endwith %}
+                    </div>
+
+                    <form method="POST" action="/login"> 
+                      {{form.csrf_token}}
+                      <h3 class="mt-4">{{title}}</h3>
 
                       <div class="form-outline mb-4">
-                        <label class="form-label" for="form2Example11"
-                          >Email</label
-                        >
-                        <input
-                          type="email"
-                          id="emailInput"
-                          class="form-control"
-                        />
+                        {{form.email.label}}
+                        {{form.email()}}
                       </div>
 
                       <div class="form-outline mb-4">
-                        <label class="form-label" for="form2Example22"
-                          >Password</label
-                        >
-                        <input
-                          type="password"
-                          id="passwordInput"
-                          class="form-control"
-                        />
+                        {{form.password.label}}
+                        {{form.password()}}
                       </div>
 
                       <div class="text-center pt-1 mb-5 pb-1">
                         <button
                           class="btn btn-block fa-lg gradient-custom-2 mb-3 login-btn"
-                          type="button"
+                          type="submit"
                         >
                           Sign in
                         </button>
@@ -155,7 +154,7 @@
                         class="d-flex align-items-center justify-content-center pb-4"
                       >
                         <p class="mb-0 me-2">Don't have an account?</p>
-                        <a href={{url_for('auth.signup')}}>
+                        <a href={{url_for('auth.new_user')}}>
                             <button type="button" class="btn btn-outline-secondary new-btn">
                             Create new
                             </button>
@@ -181,6 +180,7 @@
           </div>
         </div>
       </div>
+      <script src={{url_for('static', filename='scripts/style.js')}}></script>
     </section>
   </body>
 </html>
