--- a/templates/nav.html
+++ b/templates/nav.html
@@ -90,7 +90,7 @@
               <a class="nav-link" href="{{ url_for('page.mydata') }}">MyData</a>
             </li>
           </ul>
-          <a class="signout-btn" href="{{ url_for('page.mydata') }}">Logout</a>
+          <a class="signout-btn" href="{{ url_for('auth.signout') }}">Logout</a>
         </div>
       </div>
     </nav>
