--- a/templates/signup.html
+++ b/templates/signup.html
@@ -117,66 +117,41 @@
                       </svg>
                     </div>
 
-                    <form>
-                      <h3 class="mt-4">Sign up</h3>
+                    <form method="POST" action="/signup" enctype="multipart/form-data">
+                      {{form.csrf_token}}
+                      <h3 class="mt-4">{{ title }}</h3>
 
                       <div class="form-outline mb-4">
-
-                        <label class="form-label" for="form2Example11"
-                          >First Name</label
-                        >
-                        <input
-                          type="text"
-                          id="firstName"
-                          class="form-control"
-                        />
+                        {{form.first_name.label}}
+                        {{form.first_name()}}
+                        
                       </div>
 
                       <div class="form-outline mb-4">
 
-                        <label class="form-label" for="form2Example11"
-                          >Last Name</label
-                        >
-                        <input
-                          type="text"
-                          id="lastName"
-                          class="form-control"
-                        />
+                        {{form.last_name.label}}
+                        {{form.last_name()}}
                       </div>
 
 
                       <div class="form-outline mb-4">
 
-                        <label class="form-label" for="form2Example11"
-                          >Email</label
-                        >
-                        <input
-                          type="email"
-                          id="emailInput"
-                          class="form-control"
-                        />
+                        {{form.email.label}}
+                        {{form.email()}}
                       </div>
 
                       <div class="form-outline mb-4">
-                        <label class="form-label" for="form2Example22"
-                          >Password</label
-                        >
-                        <input
-                          type="password"
-                          id="passwordInput"
-                          class="form-control"
-                        />
+                        {{form.password.label}}
+                        {{form.password()}}
                       </div>
 
                       <div class="text-center pt-1 mb-5 pb-1">
-                        <a href={{url_for('auth.signin')}}>
-                            <button
-                            class="btn btn-block fa-lg gradient-custom-2 mb-3 login-btn"
-                            type="button"
-                            >
-                            Sign up
-                            </button>
-                        </a>
+                          <button
+                          class="btn btn-block fa-lg gradient-custom-2 mb-3 login-btn"
+                          type="submit"
+                          >
+                          Sign up
+                          </button>
                       </div>
 
                     </form>
@@ -186,6 +161,7 @@
           </div>
         </div>
       </div>
+      <script src={{url_for('static', filename='scripts/style.js')}}></script>
     </section>
   </body>
 </html>
