--- a/templates/index.html
+++ b/templates/index.html
@@ -70,9 +70,8 @@
               <h5 class="card-title text-center">Contribute</h5>
               <p class="card-text text-center">
                 Safely Stat was created by two students at the University of North Carolina
-                at Chapel Hill, but this is a community effortas we use OpenMined's and Google's algorithms. 
-                To contribute to this project click on the icon below to visit the 
-                GitHub repository.
+                at Chapel Hill, but this is a community effort as we use OpenMined's and Google's algorithms. 
+                To view or contribute to this project click on the icon below.
               </p>
               <div class="text-center">
                 <a href="https://github.com/velichet/DP_COMP_590"
