--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,7 @@
               <p class="card-text text-center">
                 Safely Stat is an open source platform that provides differentially private
                 statistics on datasets in both the local and global model. To learn more about
-                differential privacy and how to use the power of Safely Stat visit the Resources page.
+                differential privacy and how to use the power of Safely Stat visit Resources.
               </p>
               <div class="text-center">
                 <a class="btn btn-outline-secondary upload-btn" href="{{ url_for('page.resources') }}"
